--- a/pictures/making-of/index.html
+++ b/pictures/making-of/index.html
@@ -80,145 +80,145 @@
 
         <div id="lightgallery" class="gallery-inline gallery-width">
           <a href="01_Making of_1200px weisser Rahmen (1).jpg">
-            <img src="Thumbnail Rahmen weiss/01_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/01_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="02_Making of_1200px weisser Rahmen (2).jpg">
-            <img src="Thumbnail Rahmen weiss/02_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/02_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="03_Making of_1200px weisser Rahmen (3).jpg">
-            <img src="Thumbnail Rahmen weiss/03_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/03_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="04_Making of_1200px weisser Rahmen (4).jpg">
-            <img src="Thumbnail Rahmen weiss/04_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/04_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="05_Making of_1200px weisser Rahmen (5).jpg">
-            <img src="Thumbnail Rahmen weiss/05_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/05_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="06_Making of_1200px weisser Rahmen (6).jpg">
-            <img src="Thumbnail Rahmen weiss/06_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/06_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="07_Making of_1200px weisser Rahmen (7).jpg">
-            <img src="Thumbnail Rahmen weiss/07_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/07_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="08_Making of_1200px weisser Rahmen (8).jpg">
-            <img src="Thumbnail Rahmen weiss/08_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/08_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="09_Making of_1200px weisser Rahmen (9).jpg">
-            <img src="Thumbnail Rahmen weiss/09_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/09_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="10_Making of_1200px weisser Rahmen (10).jpg">
-            <img src="Thumbnail Rahmen weiss/10_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/10_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="11_Making of_1200px weisser Rahmen (11).jpg">
-            <img src="Thumbnail Rahmen weiss/11_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/11_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="12_Making of_1200px weisser Rahmen (12).jpg">
-            <img src="Thumbnail Rahmen weiss/12_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/12_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="13_Making of_1200px weisser Rahmen (13).jpg">
-            <img src="Thumbnail Rahmen weiss/13_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/13_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="14_Making of_1200px weisser Rahmen (14).jpg">
-            <img src="Thumbnail Rahmen weiss/14_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/14_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="15_Making of_1200px weisser Rahmen (15).jpg">
-            <img src="Thumbnail Rahmen weiss/15_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/15_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="16_Making of_1200px weisser Rahmen (16).jpg">
-            <img src="Thumbnail Rahmen weiss/16_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/16_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="17_Making of_1200px weisser Rahmen (17).jpg">
-            <img src="Thumbnail Rahmen weiss/17_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/17_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="18_Making of_1200px weisser Rahmen (18).jpg">
-            <img src="Thumbnail Rahmen weiss/18_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/18_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="19_Making of_1200px weisser Rahmen (19).jpg">
-            <img src="Thumbnail Rahmen weiss/19_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/19_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="20_Making of_1200px weisser Rahmen (20).jpg">
-            <img src="Thumbnail Rahmen weiss/20_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/20_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="21_Making of_1200px weisser Rahmen (21).jpg">
-            <img src="Thumbnail Rahmen weiss/21_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/21_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="22_Making of_1200px weisser Rahmen (22).jpg">
-            <img src="Thumbnail Rahmen weiss/22_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/22_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="23_Making of_1200px weisser Rahmen (23).jpg">
-            <img src="Thumbnail Rahmen weiss/23_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/23_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="24_Making of_1200px weisser Rahmen (24).jpg">
-            <img src="Thumbnail Rahmen weiss/24_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/24_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="25_Making of_1200px weisser Rahmen (25).jpg">
-            <img src="Thumbnail Rahmen weiss/25_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/25_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="26_Making of_1200px weisser Rahmen (26).jpg">
-            <img src="Thumbnail Rahmen weiss/26_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/26_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="27_Making of_1200px weisser Rahmen (27).jpg">
-            <img src="Thumbnail Rahmen weiss/27_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/27_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="28_Making of_1200px weisser Rahmen (28).jpg">
-            <img src="Thumbnail Rahmen weiss/28_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/28_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="29_Making of_1200px weisser Rahmen (29).jpg">
-            <img src="Thumbnail Rahmen weiss/29_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/29_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="30_Making of_1200px weisser Rahmen (30).jpg">
-            <img src="Thumbnail Rahmen weiss/30_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/30_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="31_Making of_1200px weisser Rahmen (31).jpg">
-            <img src="Thumbnail Rahmen weiss/31_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/31_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="32_Making of_1200px weisser Rahmen (32).jpg">
-            <img src="Thumbnail Rahmen weiss/32_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/32_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="33_Making of_1200px weisser Rahmen (33).jpg">
-            <img src="Thumbnail Rahmen weiss/33_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/33_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="34_Making of_1200px weisser Rahmen (34).jpg">
-            <img src="Thumbnail Rahmen weiss/34_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/34_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="35_Making of_1200px weisser Rahmen (35).jpg">
-            <img src="Thumbnail Rahmen weiss/35_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/35_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="36_Making of_1200px weisser Rahmen (36).jpg">
-            <img src="Thumbnail Rahmen weiss/36_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/36_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="37_Making of_1200px weisser Rahmen (37).jpg">
-            <img src="Thumbnail Rahmen weiss/37_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/37_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="38_Making of_1200px weisser Rahmen (38).jpg">
-            <img src="Thumbnail Rahmen weiss/38_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/38_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="39_Making of_1200px weisser Rahmen (39).jpg">
-            <img src="Thumbnail Rahmen weiss/39_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/39_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="40_Making of_1200px weisser Rahmen (40).jpg">
-            <img src="Thumbnail Rahmen weiss/40_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/40_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="41_Making of_1200px weisser Rahmen (41).jpg">
-            <img src="Thumbnail Rahmen weiss/41_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/41_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="42_Making of_1200px weisser Rahmen (42).jpg">
-            <img src="Thumbnail Rahmen weiss/42_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/42_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="43_Making of_1200px weisser Rahmen (43).jpg">
-            <img src="Thumbnail Rahmen weiss/43_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/43_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="44_Making of_1200px weisser Rahmen (44).jpg">
-            <img src="Thumbnail Rahmen weiss/44_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/44_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="45_Making of_1200px weisser Rahmen (45).jpg">
-            <img src="Thumbnail Rahmen weiss/45_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/45_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="46_Making of_1200px weisser Rahmen (46).jpg">
-            <img src="Thumbnail Rahmen weiss/46_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/46_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="47_Making of_1200px weisser Rahmen (47).jpg">
-            <img src="Thumbnail Rahmen weiss/47_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="Thumbnail 250px breit ohne Rahmen/47_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
         </div>
       </div>
