--- a/pictures/unsorted/index.html
+++ b/pictures/unsorted/index.html
@@ -80,91 +80,91 @@
 
         <div id="lightgallery" class="gallery-width">
           <a href="01_1200px Rahmen Weiss.jpg">
-            <img src="01_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="01_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="02_1200px Rahmen Weiss.jpg">
-            <img src="02_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="02_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="03_1200px Rahmen Weiss.jpg">
-            <img src="03_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="03_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="04_1200px Rahmen Weiss.jpg">
-            <img src="04_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="04_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="05_1200px Rahmen Weiss.jpg">
-            <img src="05_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="05_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="06_1200px Rahmen Weiss.jpg">
-            <img src="06_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="06_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="07_1200px Rahmen Weiss.jpg">
-            <img src="07_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="07_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="08_1200px Rahmen Weiss.jpg">
-            <img src="08_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="08_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="09_1200px Rahmen Weiss.jpg">
-            <img src="09_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="09_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="13_1200px Rahmen Weiss.jpg">
-            <img src="13_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="13_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="14_1200px Rahmen Weiss-14.jpg">
-            <img src="14_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="14_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="21_1200px Rahmen Weiss-21.jpg">
-            <img src="21_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="21_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="23_1200px Rahmen Weiss-23.jpg">
-            <img src="23_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="23_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="31_1200px Rahmen Weiss-31.jpg">
-            <img src="31_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="31_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="32_1200px Rahmen Weiss-32.jpg">
-            <img src="32_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="32_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="34_1200px Rahmen Weiss-34.jpg">
-            <img src="34_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="34_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="35_1200px Rahmen Weiss-35.jpg">
-            <img src="35_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="35_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="50_1200px Rahmen Weiss-50.jpg">
-            <img src="50_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="50_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="51_1200px Rahmen Weiss-51.jpg">
-            <img src="51_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="51_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="52_1200px Rahmen Weiss-52.jpg">
-            <img src="52_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="52_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="53_1200px Rahmen Weiss-53.jpg">
-            <img src="53_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="53_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="54_1200px Rahmen Weiss-54.jpg">
-            <img src="54_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="54_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="57_1200px Rahmen Weiss-57.jpg">
-            <img src="57_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="57_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="65_1200px Rahmen Weiss-65.jpg">
-            <img src="65_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="65_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="67_1200px Rahmen Weiss-67.jpg">
-            <img src="67_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="67_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="75_1200px Rahmen Weiss-75.jpg">
-            <img src="75_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="75_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="76_1200px Rahmen Weiss-76.jpg">
-            <img src="76_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="76_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="77_1200px Rahmen Weiss-77.jpg">
-            <img src="77_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="77_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="78_1200px Rahmen Weiss-78.jpg">
-            <img src="78_Thumbnail Rahmen weiss.jpg" alt="" />
+            <img src="78_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
         </div>
       </div>
