--- a/movies/index.html
+++ b/movies/index.html
@@ -84,7 +84,7 @@
                   <i class="space">|</i>
                   2022
                   <i class="space">|</i>
-                  95 min
+                  95&nbsp;min
                   </h5>
               </div>
             </div>
@@ -132,7 +132,7 @@
                   <i class="space">|</i>
                   2021
                   <i class="space">|</i>
-                  100 min
+                  100&nbsp;min
                   </h5>
               </div>
             </div>
@@ -178,7 +178,7 @@
                   <i class="space">|</i>
                   2020
                   <i class="space">|</i>
-                  91 min
+                  91&nbsp;min
                   </h5>
               </div>
             </div>
@@ -225,7 +225,7 @@
               <i class="space">|</i>
               2020
               <i class="space">|</i>
-              99 min
+              99&nbsp;min
             </h5>
           </div>
         </div>
@@ -272,7 +272,7 @@
                   <i class="space">|</i>
                   2019
                   <i class="space">|</i>
-                  107 min
+                  107&nbsp;min
                 </h5>
               </div>
             </div>
@@ -318,7 +318,7 @@
                   <i class="space">|</i>
                   2018
                   <i class="space">|</i>
-                  114 min
+                  114&nbsp;min
                 </h5>
               </div>
             </div>
@@ -364,7 +364,7 @@
                   <i class="space">|</i>
                   2017
                   <i class="space">|</i>
-                  18 min
+                  18&nbsp;min
                 </h5>
               </div>
             </div>
@@ -409,7 +409,7 @@
                   <i class="space">|</i>
                   2016
                   <i class="space">|</i>
-                  82 min
+                  82&nbsp;min
                 </h5>
               </div>
             </div>
