--- a/pictures/unsorted/index.html
+++ b/pictures/unsorted/index.html
@@ -7,7 +7,7 @@
     <title>Oliver Bolt - Bilder | Making Of</title>
     <link rel="stylesheet" href="../../assets/css/main.css" />
 
-    <link rel="stylesheet" href="../../lib/justifiedGallery-3.2.0/css/justifiedGallery.min.css" />
+    <link rel="stylesheet" href="../../lib/justifiedGallery-3.8.1/justifiedGallery.min.css" />
     <link rel="stylesheet" href="../../lib/lightGallery-2.3.0/css/lightgallery.css" />
     <link rel="stylesheet" href="../../lib/lightGallery-2.3.0/css/lg-thumbnail.css" />
   </head>
@@ -187,7 +187,7 @@
       </div>
     </nav>
     <script src="../../lib/jquery.min.js"></script>
-    <script src="../../lib/justifiedGallery-3.2.0/js/jquery.justifiedGallery.min.js"></script>
+    <script src="../../lib/justifiedGallery-3.8.1/jquery.justifiedGallery.min.js"></script>
     <script type="module" src="../../lib/lightGallery-2.3.0/lightgallery.min.js"></script>
     <script type="module" src="../../lib/lightGallery-2.3.0/plugins/thumbnail/lg-thumbnail.min.js"></script>
     <script type="module" src="../../lib/main.js"></script>
