--- a/about/index.html
+++ b/about/index.html
@@ -62,6 +62,11 @@
       </div>
     </nav>
     <section class="hero is-fullheight-with-navbar-twice has-background-image background-image-black-white-surfer-blurred is-navbar-aligned">
+      <div class="hero-head is-brand-aligned">
+        <figure class="image is-rounded">
+          <img src="../assets/img/Oliver-Bolt.jpg" alt="Portrait von Oliver Bolt" />
+        </figure>
+      </div>
       <div class="hero-body">
         <h3 class="title is-about has-text-white">
           «Hi, ich bin Oliver. Ich liebe Herausforderungen und Abenteuer. Deswegen bin ich gerne in den Bergen.
