--- a/contact/index.html
+++ b/contact/index.html
@@ -73,12 +73,12 @@
         </p>
         <ul class="social">
           <li>
-              <a href="mailto:email@oliver.bolt.name" target="_blank" class="has-text-white">
+              <a href="mailto:kontakt@oliver-bolt.ch" target="_blank" class="has-text-white">
                   <span class="icon">
                     <i class="fas fa-envelope"></i>
                   </span>
                   <span class="text">
-                      email@oliver.bolt.name
+                    kontakt@oliver-bolt.ch
                   </span>
                 </a>
           </li>
