Fix non-working css

--- a/about/index.html
+++ b/about/index.html
@@ -63,7 +63,7 @@
     </nav>
     <section class="hero is-fullheight-with-navbar-twice has-background-image background-image-black-white-surfer-blurred is-navbar-aligned">
       <div class="hero-head is-brand-aligned">
-        <figure class="image is-rounded">
+        <figure class="image">
           <img src="../assets/img/Oliver-Bolt.jpg" alt="Portrait von Oliver Bolt" />
         </figure>
       </div>
