--- a/contact/index.html
+++ b/contact/index.html
@@ -62,6 +62,11 @@
       </div>
     </nav>
     <section class="hero is-fullheight-with-navbar-twice has-background-image background-image-black-white-surfer-blurred is-navbar-aligned">
+      <div class="hero-head is-brand-aligned">
+        <figure class="image">
+          <img class="is-rounded" src="../assets/img/Oliver-Bolt.jpg" alt="Portrait von Oliver Bolt" />
+        </figure>
+      </div>
       <div class="hero-body">
         <p class="has-text-white is-intro-text">
           
