--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="../assets/img/Oliver-Bolt.jpg">
+    <meta property="og:image" content="../assets/img/Oliver-Bolt_neu.jpg">
     <title>Oliver Bolt - Über</title>
     <link rel="stylesheet" href="../assets/css/main.css">
   </head>
