--- a/about/index.html
+++ b/about/index.html
@@ -64,7 +64,7 @@
     <section class="hero is-fullheight-with-navbar-twice has-background-image background-image-black-white-surfer-blurred is-navbar-aligned">
       <div class="hero-head is-brand-aligned">
         <figure class="image">
-          <img src="../assets/img/Oliver-Bolt.jpg" alt="Portrait von Oliver Bolt" />
+          <img class="is-rounded" src="../assets/img/Oliver-Bolt.jpg" alt="Portrait von Oliver Bolt" />
         </figure>
       </div>
       <div class="hero-body">
