Geloeschte Bilder auch aus html entfernt

--- a/pictures/on-the-road/index.html
+++ b/pictures/on-the-road/index.html
@@ -92,21 +92,21 @@
           <a href="15_1200px Rahmen Weiss-15.jpg">
             <img src="15_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
-          <a href="16_1200px Rahmen Weiss-16.jpg">
+          <!--       <a href="16_1200px Rahmen Weiss-16.jpg">
             <img src="16_Thumbnail 250px ohne Rahmen.jpg" alt="" />
-          </a>
+          </a> -->
           <a href="17_1200px Rahmen Weiss-17.jpg">
             <img src="17_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
           <a href="18_1200px Rahmen Weiss-18.jpg">
             <img src="18_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
-          <a href="19_1200px Rahmen Weiss-19.jpg">
+          <!-- <a href="19_1200px Rahmen Weiss-19.jpg">
             <img src="19_Thumbnail 250px ohne Rahmen.jpg" alt="" />
-          </a>
-          <a href="20_1200px Rahmen Weiss-20.jpg">
+          </a> -->
+         <!--  <a href="20_1200px Rahmen Weiss-20.jpg">
             <img src="20_Thumbnail 250px ohne Rahmen.jpg" alt="" />
-          </a>
+          </a> -->
           <a href="22_1200px Rahmen Weiss-22.jpg">
             <img src="22_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
@@ -212,15 +212,15 @@
           <a href="69_1200px Rahmen Weiss-69.jpg">
             <img src="69_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
-          <a href="70_1200px Rahmen Weiss-70.jpg">
+          <!-- <a href="70_1200px Rahmen Weiss-70.jpg">
             <img src="70_Thumbnail 250px ohne Rahmen.jpg" alt="" />
-          </a>
+          </a> -->
           <a href="71_1200px Rahmen Weiss-71.jpg">
             <img src="71_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
-          <a href="72_1200px Rahmen Weiss-72.jpg">
+          <!-- <a href="72_1200px Rahmen Weiss-72.jpg">
             <img src="72_Thumbnail 250px ohne Rahmen.jpg" alt="" />
-          </a>
+          </a> -->
           <a href="73_1200px Rahmen Weiss-73.jpg">
             <img src="73_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
