Bild aus html code geloescht

--- a/pictures/unsorted/index.html
+++ b/pictures/unsorted/index.html
@@ -134,8 +134,8 @@
           <a href="50_1200px Rahmen Weiss-50.jpg">
             <img src="50_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
-          <a href="51_1200px Rahmen Weiss-51.jpg">
-            <img src="51_Thumbnail 250px ohne Rahmen.jpg" alt="" />
+          <!-- <a href="51_1200px Rahmen Weiss-51.jpg">
+            <img src="51_Thumbnail 250px ohne Rahmen.jpg" alt="" /> -->
           </a>
           <a href="52_1200px Rahmen Weiss-52.jpg">
             <img src="52_Thumbnail 250px ohne Rahmen.jpg" alt="" />
