Bild geloescht html

--- a/pictures/unsorted/index.html
+++ b/pictures/unsorted/index.html
@@ -140,8 +140,8 @@
           <a href="52_1200px Rahmen Weiss-52.jpg">
             <img src="52_Thumbnail 250px ohne Rahmen.jpg" alt="" />
           </a>
-          <a href="53_1200px Rahmen Weiss-53.jpg">
-            <img src="53_Thumbnail 250px ohne Rahmen.jpg" alt="" />
+          <!-- <a href="53_1200px Rahmen Weiss-53.jpg">
+            <img src="53_Thumbnail 250px ohne Rahmen.jpg" alt="" /> -->
           </a>
           <a href="54_1200px Rahmen Weiss-54.jpg">
             <img src="54_Thumbnail 250px ohne Rahmen.jpg" alt="" />
