--- a/movies/index.html
+++ b/movies/index.html
@@ -159,7 +159,7 @@
           </div>
         </div>
 
-        <div class="card" id="Schiffsunglueck">
+        <div class="card" id="schiffsunglueck">
           <div class="card-image">
             <figure class="image">
 
@@ -205,7 +205,7 @@
           </div>
         </div>
 
-        <div class="card" id="Postraub">
+        <div class="card" id="postraub">
           <div class="card-image">
             <figure class="image">
 
@@ -252,7 +252,7 @@
           </div>
         </div>
 
-        <div class="card"  id="Geisterzug">
+        <div class="card"  id="geisterzug">
           <div class="card-image">
             <figure class="image">
 
