Pictures neue Unterkategorie Test

--- a/pictures/unsorted/index.html
+++ b/pictures/unsorted/index.html
@@ -77,6 +77,9 @@
           <li class="is-active">
             <a href="../unsorted/">Unsorted</a>
           </li>
+          <li class="is-active">
+            <a href="../Test/">Test</a>
+          </li>
         </ul>
 
         <div id="lightgallery" class="gallery-width">
