--- a/about/index.html
+++ b/about/index.html
@@ -76,12 +76,16 @@
 
         <h3 class="title is-about is-uppercase has-text-white">Aktuell</h3>
         <p class="has-text-white is-light">
-          Aktuell arbeite ich als Produktionsleiter beim Schweizer Radio und Fernsehen SRF. Seit 2019 betreue in erster Linie die Docudrama-Reihe «Es geschah am…».
+          Aktuell arbeite ich als Herstellungsleiter beim Schweizer Radio und Fernsehen SRF. Seit 2019 betreue in erster Linie die Docudrama-Reihe «Es geschah am…».
         </p>
 
         <h3 class="title is-about is-uppercase has-text-white">Background</h3>
         <dl class="has-text-white timeline">
-          <dt>since 2017</dt>
+
+            <dt>since 2023</dt>
+          <dd>Herstellungsleiter beim Schweizer Radio und Fernsehen SRF</dd>
+          
+          <dt>2017 - 2023</dt>
           <dd>Produktionsleiter beim Schweizer Radio und Fernsehen SRF</dd>
 
           <dt>2016 - 2017</dt>
