--- a/pictures/action/index.html
+++ b/pictures/action/index.html
@@ -72,10 +72,10 @@
             <a href="../making-of/">Making Of</a>
           </li>
           <li>
-            <a href="../on-the-road/">Street</a>
+            <a href="../street/">Street</a>
           </li>
           <li class="is-active">
-            <a href="../unsorted/">Action</a>
+            <a href="../action/">Action</a>
           </li>
 
         </ul>
