aktualisierung: Portfolio statt CV

--- a/about/index.html
+++ b/about/index.html
@@ -116,7 +116,7 @@
         </dl>
 
         <h3 class="title is-about is-uppercase has-text-white">
-          <a href="../assets/CV_Bolt-Oliver.pdf" class="link" target="_blank">Download Full CV</a>
+          <a href="../assets/Portfolio_Oliver Bolt_small.pdf" class="link" target="_blank">Download Portfolio</a>
         </h3>
       </div>
       <div class="hero-foot"></div>
