--- a/contact/index.html
+++ b/contact/index.html
@@ -70,7 +70,7 @@
         </p>
         <ul class="social">
           <li>
-              <a href="mailto:kontakt@oliver-bolt.ch" target="_blank" class="has-text-white">
+              <a href="mailto:oliver.bolt+website@gmail.com" target="_blank" class="has-text-white">
                   <span class="icon">
                     <i class="fas fa-envelope"></i>
                   </span>
