--- a/movies/index.html
+++ b/movies/index.html
@@ -65,7 +65,7 @@
           <div class="card-image">
             <figure class="image">
 
-              <iframe width="560" height="315" src="https://www.srf.ch/play/embed?urn=urn:srf:video:c72f10b3-1fb4-4a80-b12c-b2d264843948&subdivisions=false" allowfullscreen allow="geolocation *; autoplay; encrypted-media"></iframe>
+              <iframe class="is-16y9" src="https://www.srf.ch/play/embed?urn=urn:srf:video:c72f10b3-1fb4-4a80-b12c-b2d264843948&subdivisions=false" allowfullscreen allow="geolocation *; autoplay; encrypted-media"></iframe>
 
               
             </figure>
@@ -111,7 +111,7 @@
           <div class="card-image">
             <figure class="image">
 
-              <iframe width="560" height="315" src="https://www.srf.ch/play/embed?urn=urn:srf:video:231ec8f0-755d-44d3-9113-e677dc8cc106&subdivisions=false" allowfullscreen allow="geolocation *; autoplay; encrypted-media"></iframe>
+              <iframe class="is-16y9" src="https://www.srf.ch/play/embed?urn=urn:srf:video:231ec8f0-755d-44d3-9113-e677dc8cc106&subdivisions=false" allowfullscreen allow="geolocation *; autoplay; encrypted-media"></iframe>
 
               
             </figure>
