--- a/pictures/making-of/index.html
+++ b/pictures/making-of/index.html
@@ -319,7 +319,13 @@
               <i class="fab fa-instagram"></i>
             </span>
           </a>
-         
+
+  <a href="https://www.linkedin.com/in/oliver-bolt-733456228/" target="_blank" class="navbar-item has-text-white">
+            <span class="icon">
+              <i class="fab fa-linkedin"></i>
+            </span>
+          </a>
+          
         </div>
       </div>
     </nav>
