--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta property="og:image" content="assets/img/Oliver-Bolt.jpg">
     <title>Oliver Bolt</title>
     <link rel="stylesheet" href="assets/css/main.css">
+
+    <link rel="stylesheet" href="/assets/css/light-override.css">
+
+
+    
   </head>
   <body>
     <div class="navbar has-background-black is-flex">
