--- a/contact/index.html
+++ b/contact/index.html
@@ -7,6 +7,9 @@
     <meta property="og:image" content="../assets/img/Oliver-Bolt.jpg">
     <title>Oliver Bolt - Kontakt</title>
     <link rel="stylesheet" href="../assets/css/main.css">
+
+    <link rel="stylesheet" href="/assets/css/light-override.css">
+
   </head>
   <body>
     <div class="navbar has-background-black is-flex">
