--- a/movies/index.html
+++ b/movies/index.html
@@ -7,6 +7,10 @@
     <meta property="og:image" content="../assets/img/Oliver-Bolt.jpg">
     <title>Oliver Bolt - Filme</title>
     <link rel="stylesheet" href="../assets/css/main.css">
+
+<link rel="stylesheet" href="/assets/css/light-override.css">
+
+    
   </head>
   <body>
     <div class="navbar has-background-black is-flex">
