--- a/pictures/index.html
+++ b/pictures/index.html
@@ -8,6 +8,10 @@
     <meta http-equiv="Refresh" content="0; url='making-of/'" />
     <title>Oliver Bolt - Bilder</title>
     <link rel="stylesheet" href="../assets/css/main.css" />
+
+<link rel="stylesheet" href="/assets/css/light-override.css">
+
+    
   </head>
   <body></body>
 </html>
