--- a/pictures/street/index.html
+++ b/pictures/street/index.html
@@ -8,6 +8,8 @@
     <title>Oliver Bolt - Bilder | On The Road</title>
     <link rel="stylesheet" href="../../assets/css/main.css" />
 
+    <link rel="stylesheet" href="/assets/css/light-override.css">
+
     <link rel="stylesheet" href="../../lib/justifiedGallery-3.8.1/justifiedGallery.min.css" />
     <link rel="stylesheet" href="../../lib/lightGallery-2.3.0/css/lightgallery.css" />
     <link rel="stylesheet" href="../../lib/lightGallery-2.3.0/css/lg-thumbnail.css" />
