--- a/about/index.html
+++ b/about/index.html
@@ -76,14 +76,10 @@
       </div>
       <div class="hero-body">
         <h3 class="title is-about has-text-white">
-          «Hi, ich bin Oliver. Ich liebe Herausforderungen und Abenteuer. Deswegen bin ich gerne in den Bergen.
-          Und deshalb produziere ich seit 10 Jahren bewegte Bilder.» </h3>
+          «Hi, ich bin Oliver. Ich liebe Herausforderungen – in den Bergen genauso wie in Projekten. Seit über zehn Jahren produziere ich bewegte Bilder.» </h3>
           <p class="has-text-white is-light">
-          Beim Start einer Bergtour wie auch beim Beginn eines Projektes treiben mich jeweils zwei Dinge ganz besonders an: Neugierde und Lust auf eine neue Herausforderung. Das vereinte Losstürmen 
-          begeistert mich immer wieder aufs Neue. Hingabe, Mut und Ehrlichkeit sind dabei die wichtigsten Eckpfeiler für eine erfolgreiche Umsetzung dieser 
-          gemeinsamen Reise. Um ein solches Ziel in einer bestimmten Zeit zu erreichen, kommt ein wichtiger Faktor dazu: Planung. Und hier komme ich ins Spiel. Ich biete 
-          vielseitige Erfahrung, wenn es darum geht, audiovisuelle Medienprojekte zu planen und umzusetzen. In meinem Rucksack hat es dabei stets Platz für Flexibilität. 
-          Denn spannende Momente entstehen oft erst, wenn man bereit ist, gewohnte Pfade zu verlassen.
+        Was mich antreibt, ist Neugier und die Lust, Neues anzugehen. Ob auf einer Bergtour oder bei einem Filmprojekt: Eine klare Idee, gute Planung und die Bereitschaft, flexibel zu bleiben, sind entscheidend. Denn die spannendsten Momente entstehen oft dort, wo man gewohnte Pfade verlässt.
+Ich begleite audiovisuelle Projekte von der Planung bis zur Umsetzung – mit Erfahrung, Struktur und Offenheit für das Unerwartete.
 
         </p>
 
